gccida/c3/qty_sugg_compare_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2240:25: error: use of undeclared identifier 'qty_0'
v4 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2240:42: error: use of undeclared identifier 'qty_0'
v4 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2240:76: error: use of undeclared identifier 'qty_0'
v4 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2241:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2241:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2243:25: error: use of undeclared identifier 'qty_0'
v2 = ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2243:42: error: use of undeclared identifier 'qty_0'
v2 = ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2243:76: error: use of undeclared identifier 'qty_0'
v2 = ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2244:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/local-alloc.c:2244:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_sugg_compare_1/src/obj/local-alloc.o] Error 1
